--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #1673ff;
   --primary-hover: #1254b8;
-  --selected: rgb(176, 176, 176);
+  --selected: rgb(238, 238, 238);
   --text: #111827;
   --border: #e5e7eb;
   --bg: #ffffff;
@@ -9,6 +9,9 @@
 
 html,
 body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
   font-family:
     Pretendard,
     -apple-system,
@@ -17,35 +20,34 @@ body {
     Roboto,
     "Apple SD Gothic Neo",
     "Noto Sans KR",
-    "Malgun Gothic",
     sans-serif;
-}
-
-body {
-  margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #e5e7eb;
-  height: 100%;
+  background-color: var(--border);
 }
 
 #app {
-  width: 550px;
+  width: 100%;
   min-height: 100vh;
-  border: 1px solid lightgray;
+  display: flex;
+  justify-content: center;
+}
+
+.app-container {
+  width: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: var(--bg);
 }
 
-.app-container {
-   display: flex;
-  flex-direction: column;
+@media (min-width: 769px) {
+  .app-container {
+    max-width: 800px;
+  }
 }
 
 header {
   height: 60px;
+  flex-shrink: 0;
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
@@ -66,39 +68,33 @@ header {
   padding: 10px 10px;
 }
 
+button {
+  cursor: pointer;
+}
+
 .btn-primary {
   width: 100%;
   height: 100%;
   border-radius: 10px;
-  font-size: 16px;
   border: none;
+  font-size: 16px;
   background-color: var(--primary);
   color: white;
+  transition: background-color 0.2s ease;
+}
+
+.btn-primary:hover {
+  background-color: var(--primary-hover);
 }
 
 .btn-selected {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  font-size: 28px;
-  font-weight: 500;
-  line-height: 1;
-
+  width: 100%;
+  height: 100px;
   border: none;
-  background: var(--selected);
-  color: white;
-
-  box-shadow: 0 6px 14px rgba(0, 0, 0, 0.18);
-  cursor: pointer;
-
-  transition:
-    transform 0.15s ease,
-    box-shadow 0.15s ease;
+  border-radius: 10px;
+  background-color: var(--selected);
+  color: rgb(31, 31, 31);
+  font-size: 16px;
 }
 
 .frame-item {
@@ -107,6 +103,9 @@ header {
   border: 2px solid transparent;
   overflow: hidden;
   background: #f9fafb;
+  margin-bottom: 16px;
+
+  width: 150px;
 
   transition:
     transform 0.2s ease,
