--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -157,6 +157,14 @@ button {
   font-size: 26px;
 }
 
+.frame-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  gap: 16px;
+  justify-items: center;
+  align-items: center;
+}
+
 .frame-item {
   position: relative;
   border-radius: 12px;
