css 가로 pc 화면 수정

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -41,9 +41,9 @@ body {
   background-color: var(--bg);
 }
 
-@media (max-width: 769px) {
+@media (min-width: 769px) {
   .app-container {
-    max-width: 800px;
+    max-width: 600px;
   }
 }
 
