--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -121,6 +121,7 @@ button {
 .photo-select {
   width: 100%;
   height: 180px;
+  margin-bottom: 20px;
 
   border: 2px dashed var(--border);
   border-radius: 14px;
